--- a/01-init/index.html
+++ b/01-init/index.html
@@ -10,6 +10,6 @@
   <h1>webpack</h1>
   <div id="root"></div>
 
-  <script src="../dist/main.js"></script>
+  <script src="./dist/main.js"></script>
 </body>
 </html>
